@@ -1,7 +1,8 @@
 
 MASTER
 
-* 
+* Add support for tinyint data types. In MySQL all these types would be boolean, however in 
+  our adapter, they will use the full 1 => 255 Fixnum value as you would expect. [Ken Collins]
 
 
 * 2.2.21 * (September 10th, 2009)
